--- a/configure.ac
+++ b/configure.ac
@@ -9,14 +9,10 @@ AC_CONFIG_HEADER([config.h])
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 
-# Checks for programs.
 AC_PROG_CC
-AC_PATH_PROG(AR, ar)
-AC_PATH_PROG(RANLIB, ranlib)
-AC_PROG_LN_S
+AC_PROG_CPP
 AC_PROG_INSTALL
-AC_PROG_MAKE_SET
-AC_ISC_POSIX
+AC_PROG_LN_S
 
 AC_PROG_CC_C99
 AS_IF([test "x$ac_cv_prog_cc_c99" = "xno"], [
@@ -28,33 +24,18 @@ AS_IF([test "x$GCC" = "xyes"], [
    CFLAGS="$CFLAGS $MORECFLAGS"
 ])
 
-# XXX workaround
-PACKAGE="libmowgli-2"
-AC_SUBST(PACKAGE)
+AC_PATH_PROG(AR, ar)
+AC_PATH_PROG(RANLIB, ranlib)
 
-# Checks for libraries.
 BUILDSYS_SHARED_LIB
-LIBS="$LIBS $DYNAMIC_LD_LIBS"
 
-# Checks for header files.
-AC_HEADER_DIRENT
-AC_HEADER_STDC
-AC_CHECK_HEADERS([limits.h stdlib.h string.h unistd.h locale.h stdarg.h sys/types.h sys/stat.h errno.h poll.h sys/epoll.h linux/futex.h winsock2.h])
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_C_CONST
-
-# Checks for library functions.
-AC_FUNC_CLOSEDIR_VOID
-AC_CHECK_FUNCS([memset setlocale strcasecmp strchr strdup strerror strtol strtod])
-AC_CHECK_FUNCS([printf sprintf snprintf vsnprintf mmap gettimeofday strndup])
-AC_CHECK_FUNCS([kqueue fcntl select])
-AC_FUNC_STAT
+AC_CHECK_HEADERS([poll.h winsock2.h linux/futex.h sys/epoll.h sys/select.h])
+AC_CHECK_FUNCS([fcntl kqueue mmap select])
 
 OPENSSL="no"
 AX_CHECK_OPENSSL([
    OPENSSL="yes"
-   AC_DEFINE(HAVE_OPENSSL,, [Define to 1 if OpenSSL is available])
+   AC_DEFINE(HAVE_OPENSSL,[1], [Define to 1 if OpenSSL is available])
 ])
 AS_IF([test x"$OPENSSL" = x"yes"], [
    LIBS="$LIBS $OPENSSL_LIBS"
@@ -64,7 +45,6 @@ AS_IF([test x"$OPENSSL" = x"yes"], [
 
 AC_CHECK_LIB(dl, dlopen, [LIBS="$LIBS -ldl"])
 
-dnl Detect which loader to use
 AC_MSG_CHECKING(loader type)
 case "$target" in
 *-*-mingw32)
@@ -81,7 +61,6 @@ esac
 AC_MSG_RESULT($MOWGLI_MODULE);
 AC_SUBST(MOWGLI_MODULE)
 
-# Check for optional features.
 EXAMPLES_BUILD=""
 EXAMPLES="no"
 AC_ARG_ENABLE([examples], [AS_HELP_STRING([--enable-examples], [build examples])])
@@ -93,8 +72,9 @@ AS_IF([test x"$enable_examples" = x"yes"], [
 AC_SUBST(EXAMPLES_BUILD)
 
 BUILDSYS_INIT
-BUILDSYS_SHARED_LIB
 BUILDSYS_TOUCH_DEPS
+
+AC_SUBST(PACKAGE)
 
 AC_CONFIG_FILES([buildsys.mk extra.mk libmowgli-2.pc])
 AC_OUTPUT
